# vidforge

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: shots_example.json
scripts/: benchmark.sh  render_example.sh  setup_env.sh
tests/: test_pipeline_smoke.py
vidforge/: __init__.py  cli.py  config.py
vidforge/models/: __init__.py  base.py  cogvideox.py  guidance_vap.py  hunyuan.py  portrait.py
vidforge/pipeline/: __init__.py  continuity.py  post.py  render.py  shots.py
vidforge/utils/: __init__.py  io.py  seed.py  video.py
